# OpenQM

./: CMakeLists.txt  binqm.cpp  genTest.py  qm.cpp  qm.h  qmprune.cpp
